# to-kana-rs

./: .editorconfig  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: documentation-request.md
.github/workflows/: ci.yml
benches/: to_kana_benchmark.rs
src/: fmt.rs  half_width.rs  half_width_trait.rs  hiragana.rs  katakana.rs  lib.rs  macros.rs  main.rs  small_kana.rs  to_kana_trait.rs
src/hiragana/: b.rs  c.rs  d.rs  f.rs  g.rs  h.rs  j.rs  k.rs  m.rs  n.rs  p.rs  r.rs  s.rs  small.rs  t.rs  v.rs  w.rs  y.rs  z.rs
src/katakana/: b.rs  c.rs  d.rs  f.rs  g.rs  h.rs  j.rs  k.rs  m.rs  n.rs  p.rs  r.rs  s.rs  small.rs  t.rs  v.rs  w.rs  y.rs  z.rs
tests/: hello-world.rs  konbanwa.rs  konnichiwa.rs  matte.rs  numbers.rs  readme.rs  shinichi.rs  wakatteiru.rs
