[package]
name = "to-kana"
version = "0.4.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Library for converting english phonetics to Japanese characters"
readme = "README.md"
keywords = [
    "Japanese",
    "hiragana",
    "katakana",
]
categories = [
    "command-line-utilities",
    "localization",
    "value-formatting",
]
repository = "https://github.com/spenserblack/to-kana-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "to_kana_benchmark"
harness = false

[badges]
is-it-maintained-issue-resolution = { repository = "spenserblack/to-kana-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/to-kana-rs" }
maintenance = { status = "passively-maintained" }
