[package]
name = "to-kana"
version = "0.5.1"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Converts English phonetics to Kana, And Kana to small/half-width versions"
readme = "README.md"
keywords = [
    "Japanese",
    "hiragana",
    "katakana",
]
categories = [
    "command-line-utilities",
    "localization",
    "value-formatting",
]
repository = "https://github.com/spenserblack/to-kana-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "to_kana_benchmark"
harness = false

[badges]
is-it-maintained-issue-resolution = { repository = "spenserblack/to-kana-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/to-kana-rs" }
maintenance = { status = "actively-developed" }
